--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header>
+    <header class="header">
 
         <nav>
 
@@ -94,33 +94,314 @@
 
     </header>
 
-    <main>
+    <main class="main">
 
-        <section class="section__">
+        <section class="section__advertisment">
 
             <div class="container">
 
-                <div class="__content"></div>
+                <div class="section__advertisment-content">
+
+                    <div class="section__advertisment-top">
+                        <p><img src="img/girl.png" alt=""></p>
+                        <div class="section__advertisment-top-info">
+                            <h3>Put the human back in HR.</h3>
+                            <p>Your employees are the real stars. Show the love and help them perform!</p>
+                        </div>
+                    </div>
+
+                    <div class="section__advertisment-bottom">
+                        <div class="section__advertisment-bottom-info">
+                            <h3>You don’t have to play all the parts.</h3>
+                            <p>Sales, accounting, HR— Oh My! You can’t do it all - let Clerksy help.</p>
+                        </div>
+                        <p><img src="img/man.png" alt=""></p>
+                    </div>
+
+                    <div class="section__advertisment-partners">
+                        <h3>We partner with the best</h3>
+                        <div class="section__advertisment-links">
+                            <a href="#"><img src="img/partner 1.png" alt=""></a>
+                            <a href="#"><img src="img/partner 2.png" alt=""></a>
+                            <a href="#"><img src="img/partner 3.png" alt=""></a>
+                            <a href="#"><img src="img/partner 4.png" alt=""></a>
+                            <a href="#"><img src="img/partner 5.png" alt=""></a>
+                        </div>
+                    </div>
+
+                </div>
 
             </div>
 
         </section>
 
-        <section class="section__">
+        <section class="section__quality">
 
             <div class="container">
 
-                <div class="__content"></div>
+                <div class="section__quality-content">
+
+                    <h2>HR Production of the Highest Quality</h2>
+
+                    <div class="section__quality-services">
+
+                        <div class="section__quality-item">
+                            <p><img src="img/product 1.png" alt=""></p>
+                            <p class="section__quality-text">
+                                Educates & Informs
+                                Employee Expectations
+                            </p>
+                        </div>
+                        <div class="section__quality-item">
+                            <p><img src="img/product 2.png" alt=""></p>
+                            <p class="section__quality-text">
+                                Protects Your Business
+                                Just in Case
+                            </p>
+                        </div>
+                        <div class="section__quality-item">
+                            <p><img src="img/product 3.png" alt=""></p>
+                            <p class="section__quality-text">
+                                Manages & Stores
+                                Important Documents
+                            </p>
+                        </div>
+                        <div class="section__quality-item">
+                            <p><img src="img/product 4.png" alt=""></p>
+                            <p class="section__quality-text">
+                                Create a Healthy
+                                Work Environment
+                            </p>
+                        </div>
+
+                    </div>
+
+                </div>
 
             </div>
 
         </section>
 
-        <section class="section__">
+        <section class="section__employees">
 
             <div class="container">
 
-                <div class="__content"></div>
+                <div class="section__employees-content">
+
+                    <h3>Employees come in all shapes and sizes. Find the right fit.</h3>
+                    <p class="section__employees-text">Focus on casting and screening. Let Clerksy handle contracts,
+                        resolve any on set-conflicts and
+                        make sure you are compliant with work and safety boards.</p>
+
+                    <div class="section__employees-workers">
+                        <p><img src="img/employees 1.png" alt=""></p>
+                        <p><img src="img/employees 2.png" alt=""></p>
+                        <p class="girl"><img src="img/employees 3.png" alt=""></p>
+                        <p class="uncle"><img src="img/employees 4.png" alt=""></p>
+                        <p class="family"><img src="img/employees 5.png" alt=""></p>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="section__scenes">
+
+            <div class="container">
+
+                <div class="section__scenes-content">
+
+                    <div class="section__scenes-top">
+
+                        <div class="section__scenes-info">
+                            <h3>How the scenes fit together</h3>
+                            <p>Employee Training & Development, Diversity & Inclusion Programs, and Conflict Resolution.
+                            </p>
+                        </div>
+
+                        <p><img src="img/scenes.png" alt=""></p>
+                    </div>
+
+                    <div class="section__scenes-bottom">
+
+                        <h3>Consider everyone's best interest</h3>
+                        <p class="section__scenes-text">HR is for everyone. Clerksy can help you.</p>
+
+                        <div class="section__scenes-items">
+
+                            <div class="section__scenes-item">
+                                <p><img src="img/interest 1.png" alt=""></p>
+                                <h4>Protect Your Company</h4>
+                                <ul class="section__scenes-list">
+                                    <li>
+                                        <p>Compliance Audits & Training</p>
+                                    </li>
+                                    <li>
+                                        <p>Employee Data Storage</p>
+                                    </li>
+                                    <li>
+                                        <p>Policy Drafting</p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="section__scenes-second">
+                                <p><img src="img/interest 2.png" alt=""></p>
+                                <h4>Set Your Employees Up For Success</h4>
+                                <ul class="section__scenes-list">
+                                    <li>
+                                        <p>Learning & Development</p>
+                                    </li>
+                                    <li>
+                                        <p>Employee Relations</p>
+                                    </li>
+                                    <li>
+                                        <p>Benefit Management</p>
+                                    </li>
+                                    <li>
+                                        <p>Employee Performance</p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="section__scenes-item">
+                                <p><img src="img/interest 3.png" alt=""></p>
+                                <h4>Know Your Industry's Legal Landscape</h4>
+                                <ul class="section__scenes-list">
+                                    <li>
+                                        <p>Work Place Investigations</p>
+                                    </li>
+                                    <li>
+                                        <p>Employee Mediations</p>
+                                    </li>
+                                    <li>
+                                        <p>Performance Tracking</p>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="section__ease">
+
+            <div class="container">
+
+                <div class="section__ease-content">
+
+                    <h3>It's easy as 1, 2, 3</h3>
+                    <p class="secion__ease-text">Clerksy can help use your unique business needs. Here's how:</p>
+
+                    <div class="section__ease-items">
+
+                        <div class="section__ease-item">
+
+                            <div class="section__ease-info">
+                                <p>Fill out a form and tell us what you're looking for:</p>
+                                <h4>5 minutes</h4>
+                            </div>
+
+                            <p><img src="img/ease 1.png" alt=""></p>
+                        </div>
+
+                        <div class="section__ease-item">
+
+                            <div class="section__ease-info">
+                                <p>Time it will take a Clerksy rep to follow up:</p>
+                                <h4>24 hour</h4>
+                            </div>
+
+                            <p><img src="img/ease 2.png" alt=""></p>
+                        </div>
+
+                        <div class="section__ease-last">
+                            <p class="section__ease-img"><img src="img/ease 3.png" alt=""></p>
+                            <div class="section__ease-info section__ease-absolution">
+                                <p>Take advantages of our monthly plans starting at:</p>
+                                <h4>$969 USD</h4>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <a class="section__ease-btn" href="#">Book Free Discovery Call</a>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="section__book">
+
+            <div class="container">
+
+                <div class="section__book-content">
+
+                    <div class="section__book-info">
+                        <h3>Not just another HR resource.</h3>
+                        <p>Simple. Entertaining. Informative.</p>
+                        <a class="section__book-btn" href="#">Download E-book</a>
+                    </div>
+
+                    <p><img src="img/e-book.png" alt=""></p>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="section__clerksy">
+
+            <div class="container">
+
+                <div class="section__clerksy-content">
+                    <h2>Get Started With Clerksy</h2>
+                    <p>Make sure your business puts people first.</p>
+                    <a class="section__clersky-btn" href="#">Book a Free Discovery Call</a>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="section__email">
+
+            <div class="container">
+
+                <div class="section__email-content">
+
+                    <div class="section__email-left-side">
+                        <h2>Stay up to date!</h2>
+                        <p>Sign up for the latest Clerksy news.</p>
+                    </div>
+
+                    <div class="section__email-right-side">
+
+                        <form action="">
+                            <input type="text" placeholder="Your Email">
+                            <button>Sign Up</button>
+                        </form>
+
+                        <div class="section__email-info">
+                            <p>By submitting your email you agree to receive updates about Clerksy. You can unsubscribe at
+                                any time. View our full</p>
+                                <a href="#">Privacy Policy.</a>
+                        </div>
+
+                    </div>
+
+                </div>
 
             </div>
 
